--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "razorpay",
+  "name": "server",
   "version": "1.0.0",
-  "description": "all payment gatway",
+  "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
-  "author": "Sushil",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
