--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,6 +1,7 @@
 PORT = 4000
 
-MONGO_URL = "mongodb://127.0.0.1:27017/razor"
+RAZORPAY_API_KEY= "rzp_test_0wSwnnPrLa3RMh"
 
-RAZORPAY_KEY_ID="rzp_test_0wSwnnPrLa3RMh"
-RAZORPAY_KEY_SECRET="Qlb5y31A206h1JTtqkEFxN97"
+RAZORPAY_APT_SECRET="Qlb5y31A206h1JTtqkEFxN97"
+
+MONGO_URI="mongodb://localhost:27017/razor"
